# drf-study

./: README.md
airbnb-clone/: README.md  mock.txt  pyproject.toml  python
airbnb-clone/bookings/: admin.py  models.py  serializers.py
airbnb-clone/bookings/migrations/: 0001_initial.py
airbnb-clone/categories/: admin.py  crud.py  models.py  serializers.py  urls.py  views.py
airbnb-clone/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
airbnb-clone/common/: models.py  permissions.py
airbnb-clone/config/: authentication.py  schema.py  settings.py  urls.py
airbnb-clone/direct_message/: admin.py  apps.py  models.py
airbnb-clone/direct_message/migrations/: 0001_initial.py
airbnb-clone/experiences/: admin.py  crud.py  models.py  serializers.py  urls.py  views.py
airbnb-clone/experiences/migrations/: 0001_initial.py  0002_rename_description_perk_explanation_and_more.py  0003_experience_category.py
airbnb-clone/houses/: admin.py  models.py
airbnb-clone/houses/migrations/: 0001_initial.py  0002_house_pet_allowed.py  0002_initial.py
airbnb-clone/medias/: admin.py  models.py  serializers.py  urls.py  views.py
airbnb-clone/medias/migrations/: 0001_initial.py  (+2 more)
airbnb-clone/reviews/: admin.py  models.py  serializers.py
airbnb-clone/rooms/: admin.py  crud.py  decorator.py  models.py  mutaitons.py  queries.py  schema.py  serializers.py  types.py  urls.py  views.py
airbnb-clone/users/: admin.py  models.py  serializers.py  types.py  urls.py  views.py
airbnb-clone/wishlists/: models.py  serializers.py  urls.py  views.py
(+143 files in other folders)
